# cs1b

./: -  LICENSE  README.md
hw/hw00/: .gitignore  README.md
hw/hw01/: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp
hw/hw01/src/: CMakeLists.txt  circle.cpp  circle.h  circle.hpp  hw00.cpp  hw01.cpp  hw01_driver.cpp
hw/hw01/src/circle/: CMakeLists.txt  circle.cpp  circle.h
hw/hw01/test/: CMakeLists.txt
hw/hw01/test/00_distance_test/: CMakeLists.txt  distance_test.cpp  distance_tests.cpp
hw/hw01/test/01_radius_test/: CMakeLists.txt  radius_test.cpp
hw/hw01/test/02_circumference_test/: CMakeLists.txt  circumference_test.cpp
hw/hw01/test/03_area_test/: CMakeLists.txt  area_test.cpp
hw/hw02/tests/: CMakeLists.txt
hw/hw02/tests/00_fileIO_test/: CMakeLists.txt  fileIO_test.cpp
hw/hw02/tests/00_generateNum_test/: CMakeLists.txt  generateNum_test.cpp
hw/hw02/tests/01_doubleNum_test/: CMakeLists.txt  doubleNum_test.cpp
hw/hw02/tests/01_matrixAddition_test/: CMakeLists.txt  matrixAddition_test.cpp
hw/hw02/tests/02_matrixSubtraction_test/: CMakeLists.txt  matrixSubtraction_test.cpp
hw/hw02/tests/02_reverseDigit_test/: CMakeLists.txt  reverseDigit_test.cpp
hw/hw02/tests/03_matrixMultiplication_test/: CMakeLists.txt
hw/hw02/tests/03_sumDigits_test/: CMakeLists.txt  sumDigits_test.cpp
hw/hw02/tests/04_matrixTranspose_test/: CMakeLists.txt
hw/hw02/tests/04_raisePow2_3_4_test/: CMakeLists.txt  raisePow2_3_4_test.cpp
hw/hw02/tests/05_matrixDeterminant_test/: CMakeLists.txt  matrixDeterminant_test.cpp
hw/hw02/tests/05_raiseFirstDigitPowSecondDigit_test/: CMakeLists.txt  raiseFirstDigitPowSecondDigit_test.cpp
hw/hw02/tests/06_raiseFirstAndSecondDigitPowThirdDigit_test/: CMakeLists.txt  raiseFirstAndSecondDigitPowThirdDigit_test.cpp
hw/hw02/tests/07_isPrime_test/: CMakeLists.txt  isPrime_test.cpp
hw/hw02/tests/08_addTen_test/: CMakeLists.txt
hw/hw03/: .README.md.swp  .gitignore  CMakeLists.txt  README.md  main.cpp
hw/hw03/.github/workflows/: cmake.yml  hw03_tests.yml
hw/hw03/src/: CMakeLists.txt  hw03.cpp  main_menu.cpp  matrix.h
hw/hw03/tests/: CMakeLists.txt
hw/hw03/tests/00_artist_test/: CMakeLists.txt  artist_test.cpp
hw/hw03/tests/00_fileIO_test/: CMakeLists.txt  fileIO_test.cpp
hw/hw03/tests/01_emptyArtistList_test/: CMakeLists.txt  emptyArtistList_test.cpp
hw/hw03/tests/01_matrixAddition_test/: CMakeLists.txt
hw/hw03/tests/02_aEntry_test/: CMakeLists.txt
hw/hw03/tests/02_matrixSubtraction_test/: CMakeLists.txt
hw/hw03/tests/03_matrixMultiplication_test/: CMakeLists.txt  matrixMultiplication_test.cpp
hw/hw03/tests/03_prependArtist_test/: CMakeLists.txt
hw/hw03/tests/04_appendArtist_test/: CMakeLists.txt
hw/hw03/tests/04_matrixTranspose_test/: CMakeLists.txt  matrixTranspose_test.cpp
hw/hw03/tests/05_insertArtist_test/: CMakeLists.txt  insertArtist_test.cpp
hw/hw03/tests/05_matrixDeterminant_test/: CMakeLists.txt
hw/hw03/tests/06_removeFirstArtist_test/: CMakeLists.txt  removeFirstArtist_test.cpp
hw/hw03/tests/07_removeLastArtist_test/: CMakeLists.txt  removeLastArtist_test.cpp
hw/hw03/tests/08_findArtistName_test/: CMakeLists.txt
hw/hw03/tests/09_removeArtistbyName_test/: CMakeLists.txt
hw/hw03/tests/10_deleteArtist_test/: .deleteArtist_test.cpp.swp  CMakeLists.txt  deleteArtist_test.cpp
hw/hw03/tests/11_deleteaEntry_test/: CMakeLists.txt  deleteAEntry_test.cpp
hw/hw03/tests/12_deleteArtistList_test/: CMakeLists.txt  deleteArtistList_test.cpp
hw/hw04/src/: CMakeLists.txt  artist.cpp  artist.h  artistList.cpp  artistList.h
hw/hw04/tests/: CMakeLists.txt
hw/hw05/src/: .personType.h.swp  CMakeLists.txt  personType.cpp  personType.h
(+62 files in other folders)
