project(hw02_tests)

add_subdirectory(lib/gtest-1.7.0)
add_subdirectory(00_fileIO_test)
add_subdirectory(01_matrixAddition_test)
add_subdirectory(02_matrixSubtraction_test)
add_subdirectory(03_matrixMultiplication_test)
add_subdirectory(04_matrixTranspose_test)
add_subdirectory(05_matrixDeterminant_test)
#[[
add_subdirectory(06_print2DMatrix_test)
]]
